--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -3,6 +3,7 @@
 {% block header %}
 {% load staticfiles %}
 <link rel="stylesheet"  media="all" type="text/css" href="{% static 'rx/css/d3_hbar.css' %}">
+<link rel="stylesheet"  media="all" type="text/css" href="{% static 'rx/css/d3_hbar2.css' %}">
 <link rel="stylesheet"  media="all" type="text/css" href="{% static 'rx/css/jquery-ui.min.css' %}">
 
 <!--[if IE]>
@@ -37,6 +38,7 @@ if ( $.browser.webkit ) {
 	clear:left;
 	float:right;
 	padding-left: 20px;
+	padding-bottom: 20px;
 	margin-top: 30px;
 }
 </style>
@@ -79,7 +81,6 @@ if ( $.browser.webkit ) {
 
 </div>
 <br>
-<br>
 
 
 
@@ -106,6 +107,7 @@ if ( $.browser.webkit ) {
 <p>His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. "What's happened to me? " he thought. It wasn't a dream. His room, a proper human room although a little too small, lay peacefully between its four familiar walls. A collection of textile samples lay spread out on the table - Samsa was a travelling salesman - and above it there hung a picture that he had recently cut out of an illustrated magazine and housed in a nice, gilded frame.</p>
 
 <div id="vizblock2"></div>
+<script type="text/javascript" src="{% static 'rx/js/d3_hbar_data2.js' %}"></script>
 <script type="text/javascript" src="{% static 'rx/js/d3_hbar2.js' %}"></script>
 
 <h2>Anti-anxiety Drugs</h2>
