--- a/prescript/templates/rx/base.html
+++ b/prescript/templates/rx/base.html
@@ -18,6 +18,35 @@
 
 {% block header %}{% endblock %}
 
+
+<style type="text/css">
+	@font-face {
+	  font-family: Monaco ;
+	  src: url("{% static 'rx/font/Monaco.ttf' %}") format("truetype");
+	};
+	@font-face {
+	  font-family: Garamond ;
+	  src: url("{% static 'rx/font/Garamond.ttf' %}") format("truetype");
+	};
+	@font-face {
+	  font-family: "Trebuchet MS" ;
+	  src: url("{% static 'rx/font/Trebuchet MS.ttf' %}") format("truetype");
+	};
+	@font-face {
+	  font-family: "Goudy Old Style" ;
+	  src: url("{% static 'rx/font/Goudy Old Style.TTF' %}") format("truetype");
+	};
+	@font-face {
+	  font-family: "Helvetica Neue" ;
+	  src: url("{% static 'rx/font/HelveticaNeue.ttf' %}") format("truetype");
+	};
+
+
+
+</style>
+
+
+
 </head>
 <body>
 
