--- a/prescript/templates/rx/base.html
+++ b/prescript/templates/rx/base.html
@@ -10,6 +10,7 @@
 {% load humanize %}
 {% load staticfiles %}
 <link rel="stylesheet"  media="all" type="text/css" href="{% static 'rx/css/template.css' %}">
+<link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="{% static 'rx/js/d3.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'rx/js/jquery.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'rx/js/jquery-ui.min.js' %}"></script>
