--- a/prescript/static/rx/css/template.css
+++ b/prescript/static/rx/css/template.css
@@ -221,17 +221,20 @@ h1{
 h2{
   font-size: 50px;
   padding-bottom: 20px;
+  color:black;
 }
 
 h3{
   font-size: 40px;
- 
+  color:black;
 }
 h4{
   font-size: 30px;
+  color:black;
 }
 h5{
   font-size: 20px;
+  color:black;
 }
 
 #text_main p{
@@ -329,3 +332,28 @@ h5{
   border: 0;
 }
 
+
+
+/* INFO BOXES */
+.ui-dialog{
+  background: rgba(255, 255, 25, 0.9) !important; 
+}
+.ui-dialog-content>p{
+  color:darkblue;
+}
+.help_dialog{
+  text-align: left;
+  font-family: "Times New Roman", serif;
+  font-size: 18px;
+  color:darkblue;
+}
+
+
+hr.styled_hr {
+    border: 0;
+    height: 1px;
+    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
+    background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
+    background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
+    background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
+}
