--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -24,6 +24,7 @@
 <style>
 </style>
 {% load humanize %}
+{% load rx_extras %}
 
 
 <div id="text_main">
@@ -40,7 +41,7 @@
 		</div>
 		<div id="demo_div">
 			<div id="gp_name">
-				{{gp_info.name|title}}
+				{{gp_info.name|title|mcCap}}
 			<!-- Fit font to div height -->
 			<script>
 			$(function() {
@@ -187,13 +188,13 @@
 
 
 
-<div id="deprive_dialog" class="help_dialogue" title="Area Deprivation"><p>Area deprivation is assigned according to the employment and income deprivation scores assessed by the Northern Ireland Statistics and Research Agency at the postcode of each GP. <br><br>Groups are determined by quartiles of deprivation scores and range: Most-More-Less-Least deprived.<br><br>The graph below explains further how the groups were determined.<br><br><hr><br><img src="{% static 'rx/image/zgroup.png' %}"></div>
+<div id="deprive_dialog" class="help_dialog" title="Area Deprivation"><p>Area deprivation is assigned according to the employment and income deprivation scores assessed by the Northern Ireland Statistics and Research Agency at the postcode of each GP. <br><br>Groups are determined by quartiles of deprivation scores and range: Most-More-Less-Least deprived.<br><br>The graph below explains further how the groups were determined.<br><br><hr><br><img src="{% static 'rx/image/zgroup.png' %}"></div>
 
-<div id="cost_dialog" class="help_dialogue" title="Gross Cost">Gross cost is the cost of the medicines prescribed and dispensed.</div>
+<div id="cost_dialog" class="help_dialog" title="Gross Cost"><p>Gross cost is the cost of the medicines prescribed and dispensed.</div>
 
-<div id="dgroup_dialog" class="help_dialogue" title="Deprivation Rank">This GP's prescription rate ranked against all GPs within the same deprivation group that have prescribed this medicine.</div>
+<div id="dgroup_dialog" class="help_dialog" title="Deprivation Rank"><p>This GP's prescription rate ranked against all GPs within the same deprivation group that have prescribed this medicine.</div>
 
-<div id="agroup_dialog" class="help_dialogue" title="All GPs Rank">This GP's prescription rate ranked against all other GPs that have prescribed this medicine in Northern Ireland.</div>
+<div id="agroup_dialog" class="help_dialog" title="All GPs Rank"><p>This GP's prescription rate ranked against all other GPs that have prescribed this medicine in Northern Ireland.</div>
 
 
 	
