--- a/prescript/templates/rx/base.html
+++ b/prescript/templates/rx/base.html
@@ -56,29 +56,33 @@
 <!-- ******** TEMPLATING Begin ******** -->
 
 	
-	<img class="logo" src="{% static 'rx/image/thedetail.png' %}">
-
+	<!-- <img class="logo" src="{% static 'rx/image/thedetail.png' %}">
+	 -->
 
 	<div id='cssmenu'>
 	<ul>
-	   <li><a href="{% url 'rx.views.index' %}" ><span>Main</span></a></li>
+		<li class="logo_li"><a href="http://www.thedetail.tv/" class="top_line"><img class="logo_white" src="{% static 'rx/image/thedetail_white.png' %}"></a>
+
+			
+		</li>
+	   <li class="title_li"><a href="{% url 'rx.views.index' %}" class="top_line"><img class="title_white" src="{% static 'rx/image/title_white.png' %}"></a></li>
 	   
-	   <li  class='has-sub'><a><span onclick="return true">Drugs</span></a>
+	   <li  class='has-sub'><a class="top_line"><span onclick="return true">Drugs</span></a>
 	      <ul class="scroll">
 	      {% for link in links %}
 	      	<li><a href="{% url 'rx.views.drug' link %}"><span>{{link}}</span></a></li>
 	      {% endfor %}
 	      </ul>
 	   </li>
-	   <li onclick="return true"><a><span>GPs</span></a>
+	   <li onclick="return true" ><a class="top_line"><span>GPs</span></a>
 			<ul>
 		         <li><a href="{% url 'rx.views.gp_search_area' %}"><span>Search by Postcode</span></a></li>
 		         <li><a href="{% url 'rx.views.gp_search_name' %}"><span>Search by Name</span></a></li>
 		    </ul>
 	   </li>
-	   <li><a href='.'><span>Story</span></a>
+	   <li><a href='.' class="top_line"><span>Story</span></a>
 	   </li>
-	   <li><a href='.'><span>Share</span></a>
+	   <li><a href='.' class="top_line"><span>Share</span></a>
 	      <ul>
 	         <li><a href="http://twitter.com/home?status=Drugs%20{{ request.get_full_path }}"><span>Twitter</span></a></li>
 	         <li><a href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]={{ request.get_full_path }}&p[images][0]=&p[title]=Link&p[summary]="><span>Facebook</span></a></li>
