--- a/prescript/templates/rx/base.html
+++ b/prescript/templates/rx/base.html
@@ -82,10 +82,10 @@
 	   </li>
 	   <li><a href='.' class="top_line"><span>Story</span></a>
 	   </li>
-	   <li><a href='.' class="top_line"><span>Share</span></a>
+	   <li><a href='.' class="top_line"><span><img style="height:20px; width:30px; padding:10px; display:inline;" src="{% static 'rx/image/share.png' %}"></span></a>
 	      <ul>
-	         <li><a href="http://twitter.com/home?status=Drugs%20{{ request.get_full_path }}"><span>Twitter</span></a></li>
-	         <li><a href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]={{ request.get_full_path }}&p[images][0]=&p[title]=Link&p[summary]="><span>Facebook</span></a></li>
+	         <li><a href="http://twitter.com/home?status=Drugs%20{{ request.get_full_path }}"><span>Share to Twitter</span></a></li>
+	         <li><a href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]={{ request.get_full_path }}&p[images][0]=&p[title]=Link&p[summary]="><span>Share to Facebook</span></a></li>
 	      </ul>
 	   </li>
 	</ul>
@@ -119,7 +119,7 @@
 	<p>The Detail, Fifth Floor, The Warehouse, 7 James Street South, Belfast, Northern Ireland, BT2 8DN     Telephone + 44 28 9031 5930</p>
 	</div>
 	<div class='sidebar'>
-	<p>&copy; 2011 - 2013 The Detail TV. <a href="http://www.thedetail.tv/terms-and-conditions">Terms and Conditions</a></p>
+	<p>&copy; 2011 - 2014 The Detail TV. <a href="http://www.thedetail.tv/terms-and-conditions">Terms and Conditions</a></p>
 	</div>
 	</div>
 	</div>
