--- a/prescript/static/rx/css/d3_hbar2.css
+++ b/prescript/static/rx/css/d3_hbar2.css
@@ -55,11 +55,26 @@
   font-style: italic;
 }
 .pointer2{
-  stroke:red;
-  stroke-width:2px;
+  stroke:white;
+  stroke-width:1.5px;
   opacity:0;
-  fill:red;
+  fill:#B22222; /* Hard-coded into js for key */
 }
+
+.eng_points2{
+  stroke:white;
+  stroke-width:1.5px;
+  opacity:0;
+  fill:#4682B4;
+}
+
+.wal_points2{
+  stroke:white;
+  stroke-width:1.5px;
+  opacity:0;
+  fill:#228B22;
+}
+
 .pause2{
   stroke:grey;
   stroke-width:3px;
