--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet"  media="all" type="text/css" href="{% static 'rx/css/d3_hbar.css' %}">
 <link rel="stylesheet"  media="all" type="text/css" href="{% static 'rx/css/d3_hbar2.css' %}">
 <link rel="stylesheet"  media="all" type="text/css" href="{% static 'rx/css/jquery-ui.min.css' %}">
+<link rel="stylesheet"  media="all" type="text/css" href="{% static 'rx/css/index.css' %}">
 
 <!--[if IE]>
 <script type="text/javascript">
@@ -102,7 +103,37 @@ if ( $.browser.webkit ) {
 <script type="text/javascript" src="{% static 'rx/js/d3_hbar.js' %}"></script>
 
 <h2>Antidepressants</h2>
-<p>The fall (bababadalgharaghtakamminarronnkonnbronntonner-ronntuonnthunntrovarrhounawnskawntoohoohoordenenthur — nuk!) of a once wallstrait oldparr is retaled early in bed and later on life down through all christian minstrelsy. The great fall of the offwall entailed at such short notice the pftjschute of Finnegan, erse solid man, that the humptyhillhead of humself prumptly sends an unquiring one well to the west in quest of his tumptytumtoes: and their upturnpikepointandplace is at the knock out in the park where oranges have been laid to rust upon the green since dev-linsfirst loved livvy.</p>
+<p>The fall (bababadalgharag htakamminarr onnkonnbronntonner-ronntuonnth unntrovarrhou nawnskawntoohooh oordenenthur — nuk!) of a once wallstrait oldparr is retaled early in bed and later on life down through all christian minstrelsy. The great fall of the offwall entailed at such short notice the pftjschute of Finnegan, erse solid man, that the humptyhillhead of humself prumptly sends an unquiring one well to the west in quest of his tumptytumtoes: and their upturnpikepointandplace is at the knock out in the park where oranges have been laid to rust upon the green since dev-linsfirst loved livvy.</p>
+
+
+<!-- <object type="image/svg+xml" data="{% static 'rx/image/nir_opt.svg' %}" class="map"></object> -->
+<div id="minimaps">
+	<h4>International Antidepressant Consumption</h4>
+	<div class="center_limit"
+	<p>The fall (bababadalgharag htakamminarr onnkonnbronntonner-ronntuonnth unntrovarrhou nawnskawntoohooh oordenenthur — nuk!) of a once wallstrait oldparr is retaled early in bed and later on life down through all christian minstrelsy. The great fall of the offwall entailed at such short notice the pftjschute of Finnegan, erse solid man, that the humptyhillhead of humself prumptly sends an unquiring one well to the west in quest of his tumptytumtoes: and their upturnpikepointandplace is at the knock out in the park where oranges have been laid to rust upon the green since dev-linsfirst loved livvy.</p>
+	</div>
+</div>
+<script type="text/javascript">
+var nir_map_black = "{% static 'rx/image/nir_black.png' %}"
+	nir_map_hi    = "{% static 'rx/image/nir_hi.png' %}"
+	ice_map_black = "{% static 'rx/image/ice_black.png' %}"
+	ice_map_hi    = "{% static 'rx/image/ice_hi.png' %}"
+	aus_map_black = "{% static 'rx/image/aus_black.png' %}"
+	aus_map_hi    = "{% static 'rx/image/aus_hi.png' %}"
+	can_map_black = "{% static 'rx/image/can_black.png' %}"
+	can_map_hi    = "{% static 'rx/image/can_hi.png' %}"
+	den_map_black = "{% static 'rx/image/den_black.png' %}"
+	den_map_hi    = "{% static 'rx/image/den_hi.png' %}"
+	swe_map_black = "{% static 'rx/image/swe_black.png' %}"
+	swe_map_hi    = "{% static 'rx/image/swe_hi.png' %}"
+	por_map_black = "{% static 'rx/image/por_black.png' %}"
+	por_map_hi    = "{% static 'rx/image/por_hi.png' %}"
+	uk_map_black  = "{% static 'rx/image/uk_black.png' %}"
+	uk_map_hi     = "{% static 'rx/image/uk_hi.png' %}"
+</script>
+
+<script type="text/javascript" src="{% static 'rx/js/d3_mini_maps.js' %}"></script>
+
 
 <div id="vizblock2"></div>
 <script type="text/javascript" src="{% static 'rx/js/d3_hbar_data2.js' %}"></script>
