--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -30,18 +30,7 @@ if ( $.browser.webkit ) {
 {% block content %}
 
 <style>
-#vizblock1{
-	margin-top: 20px;
-	float:left;
-	padding: 20px;
-}
-#vizblock2{
-	clear:left;
-	float:right;
-	padding-left: 20px;
-	padding-bottom: 20px;
-	margin-top: 30px;
-}
+
 </style>
 
 
@@ -97,8 +86,13 @@ if ( $.browser.webkit ) {
 
 
 
+<div class="vizblocklock1">
+<h5>Average Daily Doses Prescribed per Patient</h5>
+	<div id="vizblock1"></div>
+	<br>
+This graph shows the average rate antidepressants are prescribed by GPs in Northern Ireland. Each bar represents a group based on a GP's local level of economic deprivation. The units are <a target="_blank" href="http://www.whocc.no/ddd/definition_and_general_considera/">defined daily doses</a> per registered patient. The average used is the <a target="_blank" href="http://en.wikipedia.org/wiki/Interquartile_mean">interquartile mean</a>, which reduces the impact of outliers. Hovering over the graph shows how Northern Ireland compares to GPs in England and Wales. Click to pause the animation.
+</div>
 
-<div id="vizblock1"></div>
 <script type="text/javascript" src="{% static 'rx/js/d3_hbar_data1.js' %}"></script>
 <script type="text/javascript" src="{% static 'rx/js/d3_hbar.js' %}"></script>
 
@@ -109,10 +103,15 @@ if ( $.browser.webkit ) {
 <!-- <object type="image/svg+xml" data="{% static 'rx/image/nir_opt.svg' %}" class="map"></object> -->
 <div id="minimaps">
 	<h4>International Antidepressant Consumption</h4>
-	<div class="center_limit"
+	<div class="center_limit">
 	<p>The fall (bababadalgharag htakamminarr onnkonnbronntonner-ronntuonnth unntrovarrhou nawnskawntoohooh oordenenthur — nuk!) of a once wallstrait oldparr is retaled early in bed and later on life down through all christian minstrelsy. The great fall of the offwall entailed at such short notice the pftjschute of Finnegan, erse solid man, that the humptyhillhead of humself prumptly sends an unquiring one well to the west in quest of his tumptytumtoes: and their upturnpikepointandplace is at the knock out in the park where oranges have been laid to rust upon the green since dev-linsfirst loved livvy.</p>
 	</div>
+	<div id="minimaps_svg"></div>
+		<div class="center_limit">
+	<p>The fall (bababadalgharag htakamminarr onnkonnbronntonner-ronntuonnth unntrovarrhou nawnskawntoohooh oordenenthur — nuk!) of a once wallstrait oldparr is retaled early in bed and later on life down through all christian minstrelsy.</p>
+	</div>
 </div>
+
 <script type="text/javascript">
 var nir_map_black = "{% static 'rx/image/nir_black.png' %}"
 	nir_map_hi    = "{% static 'rx/image/nir_hi.png' %}"
@@ -135,18 +134,73 @@ var nir_map_black = "{% static 'rx/image/nir_black.png' %}"
 <script type="text/javascript" src="{% static 'rx/js/d3_mini_maps.js' %}"></script>
 
 
-<div id="vizblock2"></div>
+<div class="drugs_list">
+<h4>See more info on common antidepressants like:</h4>
+<ul>
+	<li>
+		<a href="{% url 'rx.views.drug' 'Diazepam' %}">Diazepam</a> also prescribed under the brands Diazemuls and Stesolid
+	</li>
+	<li>
+		<a href="{% url 'rx.views.drug' 'Tramadol' %}">Tramadol</a> also prescribed under the brands Larapam, Mabron, Maxitram, Oldaram, Tradorec, Tramquel, Zamadol, Zeridame, Zydol
+	</li>
+
+</ul>
+
+</div>
+
+
+
+
+
+
+<div class="vizblocklock2">
+<h5>Average Daily Doses Prescribed per Patient</h5>
+	<div id="vizblock2"></div>
+	<br>
+The average rate anti-anxiety drugs are prescribed by GPs in Northern Ireland, grouped by GPs' local level of economic deprivation. Hovering to see comparison with GPs in England and Wales. Click to pause the animation.
+</div>
+
+
 <script type="text/javascript" src="{% static 'rx/js/d3_hbar_data2.js' %}"></script>
 <script type="text/javascript" src="{% static 'rx/js/d3_hbar2.js' %}"></script>
 
+
+
 <h2 style='clear:left;'>Anti-anxiety Drugs</h2>
 <p>What clashes here of wills gen wonts, oystrygods gaggin fishy-gods! Brékkek Kékkek Kékkek Kékkek! Kóax Kóax Kóax! Ualu Ualu Ualu! Quaouauh! Where the Baddelaries partisans are still out to mathmaster Malachus Micgranes and the Verdons cata-pelting the camibalistics out of the Whoyteboyce of Hoodie Head. Assiegates and boomeringstroms. Sod’s brood, be me fear! Sanglorians, save! Arms apeal with larms, appalling. Killykill-killy: a toll, a toll. What chance cuddleys, what cashels aired and ventilated! What bidimetoloves sinduced by what tegotetab-solvers! What true feeling for their’s hayair with what strawng voice of false jiccup! O here here how hoth sprowled met the duskt the father of fornicationists but, (O my shining stars and body!) how hath fanespanned most high heaven the skysign of soft advertisement! But was iz? Iseut? Ere were sewers? The oaks of ald now they lie in peat yet elms leap where askes lay. Phall if you but will, rise you must: and none so soon either shall the pharce for the nunce come to a setdown secular phoenish.</p>
+
+<div class="drugs_list">
+<h4>Check out the data on common anti-anxiety drugs like:</h4>
+<ul>
+	<li>
+		<a href="{% url 'rx.views.drug' 'Diazepam' %}">Diazepam</a> also prescribed under the brands Diazemuls and Stesolid
+	</li>
+	<li>
+		<a href="{% url 'rx.views.drug' 'Tramadol' %}">Tramadol</a> also prescribed under the brands Larapam, Mabron, Maxitram, Oldaram, Tradorec, Tramquel, Zamadol, Zeridame, Zydol
+	</li>
+
+</ul>
+
+</div>
 
 
 <h2 style='clear:left;'>Analgesics</h2>
 
 <p>Bygmester Finnegan, of the Stuttering Hand, freemen’s mau-rer, lived in the broadest way immarginable in his rushlit toofar — back for messuages before joshuan judges had given us numbers or Helviticus committed deuteronomy (one yeastyday he sternely struxk his tete in a tub for to watsch the future of his fates but ere he swiftly stook it out again, by the might of moses, the very wat-er was eviparated and all the guenneses had met their exodus so that ought to show you what a pentschanjeuchy chap he was!) and during mighty odd years this man of hod, cement and edi-fices in Toper’s Thorp piled buildung supra buildung pon the banks for the livers by the Soangso. He addle liddle phifie Annie ugged the little craythur. Wither hayre in honds tuck up your part inher. Oftwhile balbulous, mithre ahead, with goodly trowel in grasp and ivoroiled overalls which he habitacularly fondseed, like Haroun Childeric Eggeberth he would caligulate by multiplicab-les the alltitude and malltitude until he seesaw by neatlight of the liquor wheretwin ’twas born, his roundhead staple of other days to rise in undress maisonry upstanded (joygrantit!), a waalworth of a skyerscape of most eyeful hoyth entowerly, erigenating from next to nothing and celescalating the himals and all, hierarchitec-titiptitoploftical, with a burning bush abob off its baubletop and with larrons o’toolers clittering up and tombles a’buckets clottering down.</p>
-	
+
+<div class="drugs_list">
+<h4>Read more on common analgesics like:</h4>
+<ul>
+	<li>
+		<a href="{% url 'rx.views.drug' 'Diazepam' %}">Diazepam</a> also prescribed under the brands Diazemuls and Stesolid
+	</li>
+	<li>
+		<a href="{% url 'rx.views.drug' 'Tramadol' %}">Tramadol</a> also prescribed under the brands Larapam, Mabron, Maxitram, Oldaram, Tradorec, Tramquel, Zamadol, Zeridame, Zydol
+	</li>
+
+</ul>
+
+</div>
 
 
 <br>
