1-25-13 ie handling test1

--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -188,10 +188,10 @@
 
 
 
-<div id="deprive_dialog" class="help_dialog" title="Area Deprivation"><p>Area deprivation is assigned according to the employment and income deprivation scores assessed by the Northern Ireland Statistics and Research Agency at the postcode of each GP. <br><br>Groups are determined by quartiles of deprivation scores and range: Most-More-Less-Least deprived.<br><br>The graph below explains further how the groups were determined.<br><br><hr><br><img src="{% static 'rx/image/zgroup.png' %}"></div>
+<div id="deprive_dialog" class="help_dialog" title="Area Deprivation"><p>Area deprivation is assigned according to the employment and income deprivation scores assessed by the Northern Ireland Statistics and Research Agency at the postcode of each GP. <br><br>Groups are determined by quartiles of deprivation scores and range Most-More-Less-Least deprived.</div>
 
 
-<div id="dgroup_dialog" class="help_dialog" title="Deprivation Rank"><p>This GP's prescription rate ranked against all GPs within the same deprivation group that have prescribed this medicine.</div>
+<div id="dgroup_dialog" class="help_dialog" title="Deprivation Rank"><p>This GP's prescription rate ranked against all GPs within the same deprivation group that have prescribed this medicine in Northern Ireland.</div>
 
 <div id="agroup_dialog" class="help_dialog" title="All GPs Rank"><p>This GP's prescription rate ranked against all other GPs that have prescribed this medicine in Northern Ireland.</div>
 
