--- a/prescript/templates/rx/gp_post.html
+++ b/prescript/templates/rx/gp_post.html
@@ -47,7 +47,7 @@
 		</ul>
 	<hr>
 	<div class="wrongsearch">
-		Not here? Try searching by GP name <a href="{% url 'rx.views.gp_search_name' %}">here</a>.
+		None of these? Try searching by GP name <a href="{% url 'rx.views.gp_search_name' %}">here</a>.
 	</div>
 		
 	</div>
