--- a/prescript/templates/rx/base.html
+++ b/prescript/templates/rx/base.html
@@ -3,12 +3,26 @@
 <?xml version='1.0' encoding='utf-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
+
+
+
+
+
 <head>
+
+
 	
 	<title>{% block title %}{% endblock %}</title>
 
 {% load humanize %}
 {% load staticfiles %}
+
+<link rel="icon" type="image/png" href="{% static 'rx/image/favicon.ico' %}">
+
+
+
+
+
 <link rel="stylesheet"  media="all" type="text/css" href="{% static 'rx/css/template.css' %}">
 <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="{% static 'rx/js/d3.min.js' %}"></script>
@@ -18,6 +32,9 @@
 <script type="text/javascript" src="{% static 'rx/js/underscore.js' %}"></script>
 
 {% block header %}{% endblock %}
+
+
+
 
 
 <style type="text/css">
@@ -85,7 +102,7 @@
 	   <li><a href='.' class="top_line"><span><img style="height:20px; width:30px; padding:10px; display:inline;" src="{% static 'rx/image/share.png' %}"></span></a>
 	      <ul>
 	         <li><a onclick="window.open(this.href, 'mywin',
-'left=20,top=20,width=700,height=500,toolbar=1,resizable=0'); return false;" href="http://twitter.com/home?status=The%20Detail%20-%20The%20Script%20Report:%20Prescription%20Drugs%20in%20Northern%20Ireland%20{{share_url}}%20via@TheDetailTV" ><span>Share to Twitter</span></a></li>
+'left=20,top=20,width=700,height=500,toolbar=1,resizable=0'); return false;" href="http://twitter.com/home?status=The%20Detail%20-%20The%20Script%20Report:%20Prescription%20Drugs%20in%20Northern%20Ireland%20{{share_url}}%20via%20@TheDetailTV" ><span>Share to Twitter</span></a></li>
 	         <li><a onclick="window.open(this.href, 'mywin',
 'left=20,top=20,width=700,height=500,toolbar=1,resizable=0'); return false;" href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]={{share_url}}&p[images][0]=&p[title]=The%20Detail%20-%20The%20Script%20Report:%20Prescription%20Drugs%20in%20Northern%20Ireland&p[summary]="><span>Share to Facebook</span></a></li>
 <li><a onclick="window.open(this.href, 'mywin',
