--- a/prescript/templates/rx/index.html
+++ b/prescript/templates/rx/index.html
@@ -87,10 +87,10 @@ if ( $.browser.webkit ) {
 
 
 <div class="vizblocklock1">
-<h5>Average Daily Doses Prescribed per Patient</h5>
+<h5>Average Daily Doses Prescribed <br>per 1,000 Patients per Month</h5>
 	<div id="vizblock1"></div>
 	<br>
-This graph shows the average rate antidepressants are prescribed by GPs in Northern Ireland. Each bar represents a group based on a GP's local level of economic deprivation. The units are <a target="_blank" href="http://www.whocc.no/ddd/definition_and_general_considera/">defined daily doses</a> per registered patient. The average used is the <a target="_blank" href="http://en.wikipedia.org/wiki/Interquartile_mean">interquartile mean</a>, which reduces the impact of outliers. Hovering over the graph shows how Northern Ireland compares to GPs in England and Wales. Click to pause the animation.
+This graph shows the average monthly rate antidepressants are prescribed by GPs in Northern Ireland. Each bar represents a group based on a GP's local level of economic deprivation. The units are <a target="_blank" href="http://www.whocc.no/ddd/definition_and_general_considera/">defined daily doses</a> per 1,000 registered patients per month. Hovering over the graph shows how Northern Ireland compares to GPs in England and Wales. Click to pause the animation.
 </div>
 
 <script type="text/javascript" src="{% static 'rx/js/d3_hbar_data1.js' %}"></script>
@@ -154,10 +154,10 @@ var nir_map_black = "{% static 'rx/image/nir_black.png' %}"
 
 
 <div class="vizblocklock2">
-<h5>Average Daily Doses Prescribed per Patient</h5>
+<h5>Average Daily Doses Prescribed <br>per 1,000 Patients per Month</h5>
 	<div id="vizblock2"></div>
 	<br>
-The average rate anti-anxiety drugs are prescribed by GPs in Northern Ireland, grouped by GPs' local level of economic deprivation. Hovering to see comparison with GPs in England and Wales. Click to pause the animation.
+The average monthly rate anti-anxiety drugs are prescribed by GPs in Northern Ireland, grouped by GPs' local level of economic deprivation. Hover to see comparison with GPs in England and Wales. Click to pause the animation.
 </div>
 
 
@@ -184,7 +184,7 @@ The average rate anti-anxiety drugs are prescribed by GPs in Northern Ireland, g
 </div>
 
 
-<h2 style='clear:left;'>Analgesics</h2>
+<h2 style='clear:left;'>Analgesics and Sedatives</h2>
 
 <p>Bygmester Finnegan, of the Stuttering Hand, freemen’s mau-rer, lived in the broadest way immarginable in his rushlit toofar — back for messuages before joshuan judges had given us numbers or Helviticus committed deuteronomy (one yeastyday he sternely struxk his tete in a tub for to watsch the future of his fates but ere he swiftly stook it out again, by the might of moses, the very wat-er was eviparated and all the guenneses had met their exodus so that ought to show you what a pentschanjeuchy chap he was!) and during mighty odd years this man of hod, cement and edi-fices in Toper’s Thorp piled buildung supra buildung pon the banks for the livers by the Soangso. He addle liddle phifie Annie ugged the little craythur. Wither hayre in honds tuck up your part inher. Oftwhile balbulous, mithre ahead, with goodly trowel in grasp and ivoroiled overalls which he habitacularly fondseed, like Haroun Childeric Eggeberth he would caligulate by multiplicab-les the alltitude and malltitude until he seesaw by neatlight of the liquor wheretwin ’twas born, his roundhead staple of other days to rise in undress maisonry upstanded (joygrantit!), a waalworth of a skyerscape of most eyeful hoyth entowerly, erigenating from next to nothing and celescalating the himals and all, hierarchitec-titiptitoploftical, with a burning bush abob off its baubletop and with larrons o’toolers clittering up and tombles a’buckets clottering down.</p>
 
