1-26-13 whatever before model change

--- a/prescript/templates/rx/redirect.html
+++ b/prescript/templates/rx/redirect.html
@@ -18,7 +18,7 @@
 <p class="ie">You can update your version of Internet Explorer <a href="http://windows.microsoft.com/en-us/internet-explorer/ie-11-worldwide-languages">here.</a></p>
 
 
-<p>OR you can get a browser better suited to purpose:</p>
+<p>Or update to one of the following browsers:</p>
 <img src="{% static 'rx/image/chrome.jpg' %}" align="left" width="40px" ><a class="good" href="https://www.google.com/intl/en/chrome/browser/">Click here to get Google Chrome.</a>
 <br><br>
 <img src="{% static 'rx/image/safari.png' %}" align="left" width="40px" ><a class="good" href="http://support.apple.com/downloads/#safari">Mac? Get Apple Safari here.</a>
