--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -121,7 +121,7 @@
 			<th>Drug</th>
 			<th>Written</th>
 			
-			<th><span class="table_sub"> Per 1K registered patients per month</span></th>
+			<th><span class="table_sub"> Per 1,000 registered patients per month</span></th>
 			<th><span class="table_sub"> Rank within Deprivation Group&nbsp;<span class="info" id="idgroup"><img src="{% static 'rx/image/i.png' %}" ></span></span></th>
 			<th><span class="table_sub"> Rank among all N. Irish GPs&nbsp;<span class="info" ><img id="iagroup" src="{% static 'rx/image/i.png' %}" ></span></span></th>
 		</tr>
