--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -62,6 +62,7 @@
 				<span class="big_int">
 					{{gp_info.patients|intcomma}}
 				</span>
+				
 			</div>
 			<div class="gp_demodata2">
 				<span class="head_cap">
@@ -72,6 +73,16 @@
 					{% if gp_info.deprive == '2' %}Less Deprived{% endif %}	
 					{% if gp_info.deprive == '3' %}More Deprived{% endif %}	
 					{% if gp_info.deprive == '4' %}Most Deprived{% endif %}	
+				</span>
+				<span class="head_cap">
+					Depression Prevalence
+				</span>
+				<span class="deprived">
+				{% if gp_info.qof > 0 %}
+				{{gp_info.qof|floatformat:1|percentize}}
+				{% else %}
+				Not Available
+				{% endif %}
 				</span>
 			</div>
 		</div>
@@ -132,7 +143,7 @@
 			<td class="td_drug"><a href="{% url 'rx.views.drug' drug.chem_name %}">{{drug.chem_name}}</a></td>
 			<td class="td_rx">{{drug.prescripts|floatformat:0|intcomma}}</td>
 			
-			<td class="td_rate">{{drug.ddd_per_1k|floatformat:1}}</td>
+			<td class="td_rate">{{drug.ddd_per_1k|floatformat:1|intcomma}}</td>
 			<td class="td_dep_rank">{{drug.deprive_rank|ordinal}}<span class="table_sub"> / {{drug.deprive_group}}</span></td>
 			<td class="td_rank">{{drug.all_rank|ordinal}}<span class="table_sub"> / {{drug.all_prescribing_gps}}</span></td>
 		</tr>
