--- a/prescript/static/rx/css/gp_page.css
+++ b/prescript/static/rx/css/gp_page.css
@@ -55,6 +55,11 @@
 	font-size: 14px;
 	color:darkred;	
 }
+.head_cap_mini{
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+	font-size: 11px;
+	color:darkred;	
+}
 
 .big_int{
 	font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
@@ -63,7 +68,7 @@
 }
 .deprived{
 	font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
-	font-size: 20px;
+	font-size: 22px;
 	font-weight: bold;
 }
 
