--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -79,7 +79,7 @@
 				</span><br>
 				<span class="deprived">
 				{% if gp_info.qof > 0 %}
-				{{gp_info.qof|percentize}}%
+				&nbsp;&nbsp;&nbsp;{{gp_info.qof|percentize}}%
 				{% else %}
 				Not Available
 				{% endif %}
