--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -77,7 +77,7 @@
 				<span class="head_cap_mini">
 					Depression Prevalence
 				</span><br>
-				<span class="deprived">
+				<span class="deprived" style="font-size:24px;">
 				{% if gp_info.qof > 0 %}
 				&nbsp;&nbsp;&nbsp;{{gp_info.qof|percentize}}%
 				{% else %}
