--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -76,11 +76,10 @@
 				</span>
 				<span class="head_cap_mini">
 					Depression Prevalence
-				</span><br>
+				</span>
 				<span class="deprived" style="font-size:24px;">
 				{% if gp_info.qof > 0 %}
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				{{gp_info.qof|percentize}}%
+				|&nbsp;{{gp_info.qof|percentize}}%
 				{% else %}
 				Not Available
 				{% endif %}
