--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -74,8 +74,8 @@
 					{% if gp_info.deprive == '3' %}More Deprived{% endif %}	
 					{% if gp_info.deprive == '4' %}Most Deprived{% endif %}	
 				</span>
-				<span class="head_cap_mini">
-					Depression Prevalence
+				<span class="head_cap">
+					Depression <br>Prevalence
 				</span>
 				<span class="deprived" style="font-size:24px;">
 				{% if gp_info.qof > 0 %}
