--- a/prescript/templates/rx/gp.html
+++ b/prescript/templates/rx/gp.html
@@ -74,7 +74,7 @@
 					{% if gp_info.deprive == '3' %}More Deprived{% endif %}	
 					{% if gp_info.deprive == '4' %}Most Deprived{% endif %}	
 				</span>
-				<span class="head_cap">
+				<span class="head_cap_mini">
 					Depression <br>Prevalence
 				</span>
 				<span class="deprived" style="font-size:24px;">
